tests/error/dur_postfix.gw
// [contains] in postfix of dur expression
 1::null;
